--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 4.01
  - Add '-lquadmath' to LIBS in Makefile.PL
+ - Prototype those subs specified in 'use subs'.
 
 4.0
  - Add Rmpfr_free_cache2 and Rmpfr_free_pool.
