--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 4.03
+ -  Values less than DENORM_MIN were automatically denormalized to 0 ... but should have been
+    denormalized to DENORM_MIN when greater than DENORM_MIN/2.
 
 4.02
  -  mpfr_subnormalize() in _d_bytes(), _ld_bytes() and _f128_bytes(). (These 3 functions are
