--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1655,7 +1655,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
    $nv = atonv($ws, $str); # $ws is a Math::MPFR object.
                            # Needs mpfr-3.1.6 or later
     Sets the NV $nv to the value represented by the string $str.
-    $workspace needs to be initialized (once only) with a precision of
+    $ws needs to be initialized (once only) with a precision of
     $Math::MPFR::BITS - after which atonv() can be called repeatedly
     without incurring the overhead of having to repeatedly create the
     Math::MPFR object that it needs. Ie:
