--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 4.04
+ - Support only mpfr-3.0.0 and later
 
 4.03
  - Values less than DENORM_MIN were automatically denormalized to 0 ... but should have been
