--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 4.04
  - Support only mpfr-3.0.0 and later
  - Check that first arg given to atonv() is of correct precision.
+ - In MPFR.xs - replace NULL FILE* arguments with stdout/stdout in
+   mpfr_out_str/mpfr_inp_str. (Thanks Vincent Lefevre.)
 
 4.03
  - Values less than DENORM_MIN were automatically denormalized to 0 ... but should have been
