--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 4.05
+ - Add Rmpfr_dot() and Rmpfr_get_str_ndigits. (New in 4.1.0.)
+ - Correct Rmpfr_sum to return signed int, not unsigned value.
 
 4.04
  - Support only mpfr-3.0.0 and later
