--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1707,7 +1707,9 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
      }
 
    $str = nvtoa($nv);
-    Sets $str to the value of $nv. Double-Double NVs are unsupported.
+    Requires at least version 4.0 of the mpfr library.
+    Double-Double NVs are currently unsupported.
+    Sets $str to the value of $nv.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $nv)
     is true.
