--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1712,14 +1712,16 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $nv)
     is true.
-    NOTE 1: For perls whose NV is the double-double, $str may contain
-            more digits than is necessary. (Work in progress.)
-    NOTE 2: Perl versions prior to 5.29.4, or subsequent versions that
+    NOTE 1: Perl versions prior to 5.29.4, or subsequent versions that
             don't define $Config{d_strtod} (or, respectively,
             $Config{d_strtold} for-Duselongdouble builds) are buggy in
             their assignment of values to the NV. The nvtoa() function
-            looks only at the value that was passed to it - which, with
-            such buggy perls, may differ from the intended value.
+            looks only at the value that was passed to it - which,
+            with such buggy perls, may differ from the intended value.
+            When it matters, assign with atonv().
+    NOTE 2: Be wary of values assigned by perl to double-double NVs,
+            irrespective of the perl version.
+            When it matters, assign with atonv().
 
    $MPFR_version = Rmpfr_get_version();
     Returns the version of the MPFR library (eg 2.1.0) being used by
