--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
+4.08
+
 4.07
- - Alter the way that atonv() is called.
  - Fix bug in t/atonv.t. (Thanks Dana Jacobsen)
  - Add nvtoa()
+ - Alter the way that atonv() is called.
+ - Emit deprecation warnings in Rmpfr_grandom and Rmpfr_root if mpfr
+   version >= 4.0
 
 4.06
  - Fix bug (https://bugs.debian.org/918673) in t/subnormal_doubles.t
