--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 4.08
+ - In nvtoa(), Work around mpfr_get_str() bug that was not fixed until
+   mpfr-4.0.2
 
 4.07
  - Fix bug in t/atonv.t. (Thanks Dana Jacobsen)
