--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
    http://www.cpantesters.org/cpan/report/844b433e-2463-11e9-b3bd-8a932d9bfb17
    and
    http://www.cpantesters.org/cpan/report/608800de-245b-11e9-b3bd-8a932d9bfb17
+ - Add t/nvtoa2.t for additional testing of nvtoa function
 
 4.08
  - In nvtoa(), Work around mpfr_get_str() bug that was not fixed until
