--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1691,9 +1691,15 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     the string $str.
     If $Config{nvtype} is double, it therefore returns the same
     value as atonv.
+    See atonv(), immediately below.
 
    $nv = atonv($str); # Needs mpfr-3.1.6 or later
     Sets $nv to the NV value represented by the string $str.
+    If $str expresses a base 2 value, begin it with '0b' or '0B'.
+    If $str expresses a base 16 value, begin it with '0x' or '0X.
+    For example:
+      atonv('0x0.89p5'), atonv('0x0.112@2'), atonv('17.125') and
+      atonv('0b0.10001001e5') all return 17.125.
     NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
           Math-MPFR-4.07.
 
