MPFR.pod - alter nvtoa documentation in line with changes made

--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1703,7 +1703,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
           Math-MPFR-4.07.
 
-   $str = nvtoa($nv); # Needs mpfr-4.0.0 or later
+   $str = nvtoa($nv);
     Sets $str to the value of $nv.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $nv)
@@ -1715,11 +1715,14 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
             of values to the NV. The nvtoa() function looks only at
             the value that was passed to it - which, with such buggy
             perls, may differ from the intended value by a few ULPs.
-            When it matters, assign with atonv().
+            When it matters, assign with atonv() - which requires
+            mpfr-3.1.6.
     NOTE 2: Be wary of values assigned by perl to double-double NVs.
-            Such assignments may also be incorrect by up to a few
-            ULPs, irrespective of the perl version.
-            When it matters, assign with atonv().
+            Such assignments may be incorrect by up to a few ULPS,
+            irrespective of the perl version.
+            When it matters, assign with atonv() - which requires
+            mpfr-3.1.6.
+            With these NVs, nvtoa() currently requires mpfr-4.0.0.
 
    $MPFR_version = Rmpfr_get_version();
     Returns the version of the MPFR library (eg 2.1.0) being used by
