--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1703,7 +1703,27 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
           Math-MPFR-4.07.
 
-   $str = nvtoa($nv);
+   $str = doubletoa($nv); # Available only when $Config{nvsize} == 8
+                          # Else use nvtoa().
+    Sets $str to the value of the double $nv.
+    $str will appear in standard decimal format such that the
+    condition ($str == $nv) is true.
+    The grisu3 algorithm used by this function, whilst very quick,
+    will fail for about 0.5% of values. When this happens doubletoa
+    will (by default) fall back to using nvtoa() - which is slower,
+    but reliable.
+    An alternative fallback (achievable by providing the DTOA=S
+    argument to the 'perl Makefile.PL' step of the Math::MPFR build)
+    will ensure that sprintf("%.16e", $nv) is returned. This will
+    be an accurate return, and it will be quicker than the nvtoa()
+    fallback, but it often provides more digits than are necessary.
+    Whenever doubletoa falls back to the nominated fallback routine,
+    $Math::MPFR::doubletoa_fallback will be set to 1. This feature
+    can be disabled by providing the FB=0 argument to the
+   'perl Makefile.PL' step of the Math::MPFR build.
+
+   $str = nvtoa($nv); # Available irrespective of $Config{nvsize}
+                      # and $Config{nvtype}
     Sets $str to the value of $nv.
     $str will appear in standard decimal format, containing the
     *minimum* number of digits such that the condition ($str == $nv)
