--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 4.13
  - Fix bug in t/rndna.t and t/rndna2.t (exposed by:
    http://www.cpantesters.org/cpan/report/90030d18-8f4f-11e9-a14c-c69b77725194 )
+ - Change stringification of 'inf' & 'nan' from '@Inf@' & '@NaN@'to 'Inf' & 'NaN,
+   except for Rmpfr_deref2(), which will still retain the actual inf or nan
+   string returned by mpfr - ie '@Inf@' & '@NaN@'.
 
 4.12
  - Fix bug in nvtoa() that had values with negative single digit significands &&
