--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@
  - Change stringification of 'inf' & 'nan' from '@Inf@' & '@NaN@'to 'Inf' & 'NaN,
    except for Rmpfr_deref2(), which will still retain the actual inf or nan
    string returned by mpfr - ie '@Inf@' & '@NaN@'.
+ - Remove definition of MAXIMUM_ALLOWABLE_BASE as it is always 62 now that we
+   no longer support versions of MPFR older than 3.0.0.
+ - Accommodate extended range of allowable bases for mpfr_out_str with MPFR-4.1.0
+   and later.
 
 4.12
  - Fix bug in nvtoa() that had values with negative single digit significands &&
